manifests/mattermost-team-edition/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost-team-edition
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: ca-issuer
spec:
  rules:
    - host: mattermost.kind.cluster
      http:
        paths:
          - backend:
              service:
                name: mattermost-team-edition
                port:
                  number: 8065
            path: /
            pathType: Prefix
  tls:
    - secretName: mattermost.kind.cluster
      hosts:
        - mattermost.kind.cluster
